added about, services etc sections to the main page

--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,1 +1,7 @@
 {% include 'base.html' %}
+
+{% include 'pages/about.html' %}
+
+{% include 'pages/services.html' %}
+
+{% include 'pages/contact.html' %}
