--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,7 +1,10 @@
 {% include 'base.html' %}
 
-{% include 'pages/about.html' %}
+{% block content %}
+    <!-- Include content sections -->
+    {% include 'pages/about.html' %}
 
-{% include 'pages/services.html' %}
+    {% include 'pages/services.html' %}
 
-{% include 'pages/contact.html' %}
+    {% include 'pages/contact.html' %}
+{% endblock %}
