created navbar.html file to seperate header and navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
     <!-- Include the header -->
     {% include 'header.html' %}
 
+    {% include 'navbar.html' %}
+
     <!-- Main content block -->
     <main>
         {% block content %}{% endblock %}
