made navbar to appear before header

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,14 @@
 </head>
 <body>
 
-    <!-- Include the header -->
-    {% include 'header.html' %}
-
+   
+    <!-- Include the navbar -->
+    
     {% include 'navbar.html' %}
+
+     <!-- Include the header -->
+
+    {% include 'header.html' %}
 
     <!-- Main content block -->
     <main>
