--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,7 @@
         <li class="nav-item"><a href="#contact" class="nav-link" data-scroll="contact">Contact</a></li>
         <li class="nav-item"><a href="#" class="nav-link" data-scroll="blog">Blog</a></li>
     </ul>
+
     </nav>
   </div> -->
 
@@ -22,11 +23,14 @@
         <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
+            
+          <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
             </ul>
+
         </div>
     </div>
 </nav>
