made header section to occupy whole screen regardless

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 
 
 <!-- Header-->
-  <header class="bg-primary bg-gradient text-white">
+  <header class="bg-primary bg-gradient text-white" id="header">
     <div class="container px-4 text-center">
         <h1 class="fw-bolder">Welcome to Scrolling Nav</h1>
         <p class="lead">A functional Bootstrap 5 boilerplate for one page scrolling websites</p>
