--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,14 @@
 /* Add this to your CSS */
 
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
 #mainNav {
     position: sticky;
     top: 0;
