--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -1,6 +1,6 @@
 <!-- About section-->
 <section id="about">
-    <div class="container px-4">
+    <div class="container px-4 section">
         <div class="row gx-4 justify-content-center">
             <div class="col-lg-8">
                 <h2>About this page</h2>
