--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -1,6 +1,6 @@
  <!-- Contact section-->
  <section id="contact">
-    <div class="container px-4">
+    <div class="container px-4 section">
         <div class="row gx-4 justify-content-center">
             <div class="col-lg-8">
                 <h2>Contact us</h2>
