--- a/pages/templates/pages/services.html
+++ b/pages/templates/pages/services.html
@@ -1,5 +1,5 @@
  <!-- Services section-->
- <section class="bg-light" id="services">
+ <section class="bg-light section" id="services">
     <div class="container px-4">
         <div class="row gx-4 justify-content-center">
             <div class="col-lg-8">
